feat: add settings page with language selector and external links

--- a/src/index.css
+++ b/src/index.css
@@ -232,3 +232,8 @@ html {
   overflow: -moz-scrollbars-vertical;
   overflow-y: scroll;
 }
+
+html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
+}
